# phil-os

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  run.sh
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
