[package]
name = "phil-os"
version = "0.1.0"
edition = "2024"

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
# Basic BIOS bootloeader without C dependencies, just Rust and inline assembly
bootloader = "0.9"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"]}
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

# This provides an easy way to exit QEMU from the guest system
# The iobase and iosize specifies the port through the device 
# can be reached form the kernel
[package.metadata.bootimage]
# For test only
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    # Redirect output to stdou
    "-serial", "stdio",
    # Hide qemu window since we already have stdout
    "-display", "none"
]
# maps specified exist code to exit code 0
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # (in seconds)